--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,38 @@
-#container {
-  text-align: center;
+.shop-list {
+    column-gap: 1rem;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    display: flex;
+    padding: 1rem;
+    row-gap: 1rem;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+    ion-card {
+        max-width: 250px;
+        min-width: 200px;
+        width: 70%;
+    }
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+ion-fab-button {
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+    &::after {
+        top: 50%; right: 0;
+        transition: all 0.3s;
+        transform: translate(0, -50%);
+        background-color: rgba(222, 222, 222, 0.6);
+        content: 'Start Shop';
+        pointer-events: none;
+        border-radius: 5px;
+        position: absolute;
+        padding: 0.5rem;
+        opacity: 0;
+    }
+    &:hover::after {
+        right: calc(100% + 1rem);
+        transition: all 0.1s;
+        opacity: 1;
+    }
 }
