--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,178 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+* {
+    font-family: 'Open Sans', sans-serif;
+}
+
+app-root, #routerAnimationContainer, ion-app {
+    background: black;
+}
+
+input[type="submit"], button {
+    background-color: royalblue;
+    border-radius: 5px !important;
+    justify-content: center;
+    align-items: center;
+    column-gap: 0.25em;
+    margin-top: 0.5rem;
+    padding: 0.5rem;
+    color: white;
+    display: flex;
+    border: none;
+    height: 35px;
+    width: 100%;
+
+    
+    &:disabled {
+        opacity: 0.6;
+        &:hover {
+            cursor: not-allowed;
+        }
+        &.loading app-loader {
+            display: flex;
+        }
+    }
+}
+
+.message {
+    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    background-color: lightgray;
+    box-shadow: 0 0 5px gray;
+    transform: scale(0.95);
+    margin-bottom: 0.5rem;
+    font-size: small;
+    color: black;
+
+    &.error {
+        background-color: tomato;
+        color: white;
+    }
+}
+
+ion-item.checkbox-item, ion-item.link-button {
+    --background: transparent;
+    --border-color: transparent;
+    --background-hover: transparent;
+}
+
+ion-item.nav-link-button {
+    --background: transparent;
+    --border-color: transparent;
+}
+
+ion-item.error-message {
+    --border-radius: 5px;
+}
+
+ion-content.custom-scroll-box {
+    &::part(scroll) {
+        height: calc(100vh - 56px);
+    }
+}
+
+ion-modal {
+    --backdrop-opacity: 0.7;
+    --border-radius: 5px;
+    --max-height: 200px;
+    --max-width: 350px;
+}
+
+.small-padding {
+    padding: 0.5rem;
+}
+
+ion-card {
+    ion-card-header {
+        &.no-padding-bottom {
+            padding-bottom: 0;
+        }
+        ion-card-title.ios {
+            font-size: 1.5rem;
+            padding-bottom: 0.25rem;
+        }
+        ion-card-subtitle {
+            color: gray;
+        }
+    }
+    ion-buttons.ios {
+        padding: 0 1rem 1rem;
+    }
+}
+
+.dateFormatToggle ion-note.ios {
+    font-size: 0.9em;
+}
+
+.button-icon-only {
+    display: none;
+}
+.icon-button {
+    display: flex;
+}
+
+@media screen and (max-width: 360px) {
+    .button-icon-only {
+        display: flex;
+    }
+    .button-with-icon {
+        display: none;
+    }
+}
+
+
+ion-menu {
+    &::part(backdrop) {
+        background-color: black;
+    }
+    ion-item ion-icon[slot] {
+        margin-right: 1rem;
+    }
+}
+
+ion-header ion-toolbar.ios {
+    padding: 0.3rem;
+    &:first-of-type {
+        padding-top: 0.3rem;
+    }
+}
+ion-title.ios {
+    text-align: left;
+    padding: 0 0.5rem;
+    width: max-content;
+}
+ion-buttons + ion-title.ios {
+    text-align: center;
+    width: 100%;
+}
+
+ion-item.with-checkbox.ios ion-label {
+    padding: 0.75rem 0;
+}
+
+
+.makeSmaller {
+    transform: scale(0.85);
+}
+
+app-audio {
+    p {
+        margin: 0;
+        padding: 0 0.25rem;
+    }
+    ion-range {
+        width: 100px !important;
+        --knob-size: 10px;
+        --knob-background: white;
+        --bar-background: lightgray;
+        --bar-background-active: white;
+    }
+    ion-icon + a ion-icon {
+        padding-left: 0.25rem;
+        transform: scale(0.7) !important;
+    }
+}
