--- a/src/global.scss
+++ b/src/global.scss
@@ -103,6 +103,7 @@ ion-modal {
     --border-radius: 5px;
     --max-height: 200px;
     --max-width: 350px;
+    --width: 80%;
 }
 
 .small-padding {
@@ -197,5 +198,135 @@ app-audio {
     ion-icon + a ion-icon {
         padding-left: 0.25rem;
         transform: scale(0.7) !important;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    .md body {
+        &.dark {
+            --ion-background-color: #121212;
+            --ion-background-color-rgb: 18,18,18;
+            --ion-text-color: #ffffff;
+            --ion-text-color-rgb: 255,255,255;
+            --ion-border-color: #222222;
+            --ion-color-step-50: #1e1e1e;
+            --ion-color-step-100: #2a2a2a;
+            --ion-color-step-150: #363636;
+            --ion-color-step-200: #414141;
+            --ion-color-step-250: #4d4d4d;
+            --ion-color-step-300: #595959;
+            --ion-color-step-350: #656565;
+            --ion-color-step-400: #717171;
+            --ion-color-step-450: #7d7d7d;
+            --ion-color-step-500: #898989;
+            --ion-color-step-550: #949494;
+            --ion-color-step-600: #a0a0a0;
+            --ion-color-step-650: #acacac;
+            --ion-color-step-700: #b8b8b8;
+            --ion-color-step-750: #c4c4c4;
+            --ion-color-step-800: #d0d0d0;
+            --ion-color-step-850: #dbdbdb;
+            --ion-color-step-900: #e7e7e7;
+            --ion-color-step-950: #f3f3f3;
+            --ion-item-background: #1e1e1e;
+            --ion-toolbar-background: #1f1f1f;
+            --ion-tab-bar-background: #1f1f1f;
+            --ion-card-background: #2e2e2e;
+        }
+        &.light {
+            --ion-background-color: #ffffff;
+            --ion-background-color-rgb: 255,255,255;
+            --ion-text-color: #000000;
+            --ion-text-color-rgb: 0,0,0;
+            --ion-item-background: #ffffff;
+            --ion-toolbar-background: #ffffff;
+            --ion-tab-bar-background: #ffffff;
+            --ion-card-background: #ffffff;
+            --ion-color-step-850: #000000;
+
+            .ion-color-light {
+                --ion-color-base: var(--ion-color-dark, #222428) !important;
+                --ion-color-base-rgb: var(--ion-color-dark-rgb, 34, 36, 40) !important;
+                --ion-color-contrast: var(--ion-color-dark-contrast, #fff) !important;
+                --ion-color-contrast-rgb: var(--ion-color-dark-contrast-rgb, 255, 255, 255) !important;
+                --ion-color-shade: var(--ion-color-dark-shade, #1e2023) !important;
+                --ion-color-tint: var(--ion-color-dark-tint, #383a3e) !important;
+            }
+            ion-button.ion-color-dark {
+                --ion-color-base: var(--ion-color-light, #f4f5f8) !important;
+                --ion-color-base-rgb: var(--ion-color-light-rgb, 244, 245, 248) !important;
+                --ion-color-contrast: var(--ion-color-light-contrast, #000) !important;
+                --ion-color-contrast-rgb: var(--ion-color-light-contrast-rgb, 0, 0, 0) !important;
+                --ion-color-shade: var(--ion-color-light-shade, #d7d8da) !important;
+                --ion-color-tint: var(--ion-color-light-tint, #f5f6f9) !important;
+            }
+        }
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .md body {
+        &.dark {
+            --ion-background-color: #121212;
+            --ion-background-color-rgb: 18,18,18;
+            --ion-text-color: #ffffff;
+            --ion-text-color-rgb: 255,255,255;
+            --ion-border-color: #222222;
+            --ion-color-step-50: #1e1e1e;
+            --ion-color-step-100: #2a2a2a;
+            --ion-color-step-150: #363636;
+            --ion-color-step-200: #414141;
+            --ion-color-step-250: #4d4d4d;
+            --ion-color-step-300: #595959;
+            --ion-color-step-350: #656565;
+            --ion-color-step-400: #717171;
+            --ion-color-step-450: #7d7d7d;
+            --ion-color-step-500: #898989;
+            --ion-color-step-550: #949494;
+            --ion-color-step-600: #a0a0a0;
+            --ion-color-step-650: #acacac;
+            --ion-color-step-700: #b8b8b8;
+            --ion-color-step-750: #c4c4c4;
+            --ion-color-step-800: #d0d0d0;
+            --ion-color-step-850: #dbdbdb;
+            --ion-color-step-900: #e7e7e7;
+            --ion-color-step-950: #f3f3f3;
+            --ion-item-background: #1e1e1e;
+            --ion-toolbar-background: #1f1f1f;
+            --ion-tab-bar-background: #1f1f1f;
+            --ion-card-background: #2e2e2e;
+    
+            .ion-color-light {
+                --ion-color-base: var(--ion-color-dark, #222428) !important;
+                --ion-color-base-rgb: var(--ion-color-dark-rgb, 34, 36, 40) !important;
+                --ion-color-contrast: var(--ion-color-dark-contrast, #fff) !important;
+                --ion-color-contrast-rgb: var(--ion-color-dark-contrast-rgb, 255, 255, 255) !important;
+                --ion-color-shade: var(--ion-color-dark-shade, #1e2023) !important;
+                --ion-color-tint: var(--ion-color-dark-tint, #383a3e) !important;
+            }
+            ion-button.ion-color-dark {
+                --ion-color-base: var(--ion-color-light, #f4f5f8) !important;
+                --ion-color-base-rgb: var(--ion-color-light-rgb, 244, 245, 248) !important;
+                --ion-color-contrast: var(--ion-color-light-contrast, #000) !important;
+                --ion-color-contrast-rgb: var(--ion-color-light-contrast-rgb, 0, 0, 0) !important;
+                --ion-color-shade: var(--ion-color-light-shade, #d7d8da) !important;
+                --ion-color-tint: var(--ion-color-light-tint, #f5f6f9) !important;
+            }
+        }
+        &.light {
+            --ion-background-color: #ffffff;
+            --ion-background-color-rgb: 255,255,255;
+            --ion-text-color: #000000;
+            --ion-text-color-rgb: 0,0,0;
+    
+            // .ion-color-light {
+            //     --ion-color-base: var(--ion-color-dark, #222428) !important;
+            //     --ion-color-base-rgb: var(--ion-color-dark-rgb, 34, 36, 40) !important;
+            //     --ion-color-contrast: var(--ion-color-dark-contrast, #fff) !important;
+            //     --ion-color-contrast-rgb: var(--ion-color-dark-contrast-rgb, 255, 255, 255) !important;
+            //     --ion-color-shade: var(--ion-color-dark-shade, #1e2023) !important;
+            //     --ion-color-tint: var(--ion-color-dark-tint, #383a3e) !important;
+            // }
+        }
     }
 }
