Small visual fix

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-toolbar color="tertiary">
+    <ion-toolbar color="primary">
         <ion-title><ion-icon name="bag-handle-outline"></ion-icon> Mystery Shopping</ion-title>
         <ion-buttons slot="end">
             <ion-button routerLink="/settings" class="button-icon-only"><ion-icon slot="icon-only" name="settings-outline"></ion-icon></ion-button>
