--- a/src/app/shop/shop.page.html
+++ b/src/app/shop/shop.page.html
@@ -56,16 +56,12 @@
     <ion-header>
         <ion-toolbar>
             <ion-buttons slot="start">
-                <ion-button class="button-icon-only" routerLink="/home"><ion-icon name="arrow-back-outline" slot="icon-only"></ion-icon></ion-button>
-                <ion-button class="button-with-icon" routerLink="/home"><ion-icon name="arrow-back-outline" slot="start"></ion-icon>Back</ion-button>
+                <ion-button color="dark" routerLink="/home"><ion-icon name="arrow-back-outline" slot="icon-only"></ion-icon></ion-button>
             </ion-buttons>
             <ion-title class="ion-text-center">{{ nameToShow }}</ion-title>
             <ion-buttons slot="end">
                 <ion-menu-toggle>
-                    <ion-button class="button-icon-only"><ion-icon name="hammer-outline" slot="icon-only"></ion-icon></ion-button>
-                </ion-menu-toggle>
-                <ion-menu-toggle>
-                    <ion-button class="button-with-icon"><ion-icon name="hammer-outline" slot="end"></ion-icon>Tools</ion-button>
+                    <ion-button color="dark"><ion-icon name="hammer-outline" slot="icon-only"></ion-icon></ion-button>
                 </ion-menu-toggle>
             </ion-buttons>
         </ion-toolbar>
@@ -85,7 +81,7 @@
         </div>
         <div class="message-item {{ message.sent ? 'output' : 'result' }} {{ 'fontSize'+messageFontSize }} {{ message.type }}" *ngFor="let message of messages; let i = index">
             <span class="message-time-stamp"><ion-button size="small" fill="clear" color="danger" (click)="deleteMessage(i)"><ion-icon name="trash-outline"></ion-icon></ion-button>{{ message.date }}</span>
-            <ion-img [src]="message.content" alt="picture taken" *ngIf="message.type == 'image'"></ion-img>
+            <ion-img [src]="message.content" alt="picture taken" *ngIf="message.type == 'image'" (click)="openImageView(message.content)"></ion-img>
             <app-audio *ngIf="message.type == 'audio'" [audioSource]="message.content" [recordDate]="message.date"></app-audio>
             <p *ngIf="message.type == 'note'" [innerHTML]="message.content"></p>
             <code *ngIf="message.type == 'command'">{{ message.content }}</code>
@@ -98,3 +94,28 @@
         </ion-item>
     </ion-footer>
 </div>
+<app-image-view [class]="showImageView ? 'show' : 'hide'" [imageSrc]="imageViewSrc" (exitingImageView)="closeImageView()"></app-image-view>
+<ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+    <ng-template>
+            <ion-header>
+                <ion-toolbar>
+                    <ion-title>Delete Shop Content</ion-title>
+                    <ion-buttons slot="end">
+                        <ion-button color="danger" [strong]="true" (click)="cancel()"><ion-icon name="close-outline"></ion-icon></ion-button>
+                    </ion-buttons>
+                </ion-toolbar>
+            </ion-header>
+            <ion-content>
+                <ion-text>
+                    <p class="ion-padding-horizontal">Are you sure you want to delete this {{ deletingType }}?</p>
+                </ion-text>
+            </ion-content>
+            <ion-footer>
+                <ion-toolbar>
+                    <ion-buttons slot="end">
+                        <ion-button (click)="deleteContent()" [strong]="true" slot="end" color="danger"><ion-icon name="trash-outline" slot="end"></ion-icon>Delete</ion-button>
+                    </ion-buttons>
+                </ion-toolbar>
+            </ion-footer>
+    </ng-template>
+</ion-modal>
