--- a/src/app/shop/shop.page.html
+++ b/src/app/shop/shop.page.html
@@ -64,6 +64,7 @@
                     <ion-button color="dark"><ion-icon name="hammer-outline" slot="icon-only"></ion-icon></ion-button>
                 </ion-menu-toggle>
             </ion-buttons>
+            <ion-progress-bar type="indeterminate" *ngIf="savingMessages"></ion-progress-bar>
         </ion-toolbar>
     </ion-header>
     <ion-content #messagesContainer>
