change to back button this fixes a slight animation inconsistency

--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-button routerLink="/home"><ion-icon name="arrow-back-outline" slot="start"></ion-icon></ion-button>
+            <ion-back-button defaultHref="/home"></ion-back-button>
         </ion-buttons>
         <ion-title>App Settings</ion-title>
     </ion-toolbar>
