add tutorial start button

--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -63,6 +63,10 @@
                             </ion-segment-button>
                         </ion-segment>
                     </ion-item>
+                    <ion-item color="light" class="ion-margin-vertical with-checkbox">
+                        <ion-label>App Tutorial</ion-label>
+                        <ion-button>Start <ion-icon name="arrow-right" slot="end"></ion-icon></ion-button>
+                    </ion-item>
                 </ion-list>
             </ion-col>
         </ion-row>
